# web_tutor_env

./: .gitignore  Dockerfile  README.md  agent_test_log.txt  agent_test_log3.txt  client.py  demo_script.md  deploy.py  deploy_log.txt  deploy_log2.txt  deploy_log3.txt  deploy_log_hf5.txt  environment.py  hf_auth_check.txt  hf_auth_check2.txt  hf_direct_log.txt  hf_git_log2.txt  hf_push_log.txt  hf_sync.py  inference.py  main.py  models.py  openenv.yaml  push4_log.txt  pyproject.toml  requirements.txt  smoke_test.py  tasks.py  test_api.py  uv_output.txt  validate.sh  validate_log.txt  validate_log2.txt  validation_log.txt  verify_hackathon.py
server/: __init__.py  app.py  environment.py
static/: app.js  index.html  styles.css
